--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/tinker": "^2.8",
         "laravelcollective/html": "^6.4",
         "livewire/livewire": "^3.5",
+        "mcamara/laravel-localization": "^2.2",
         "spatie/laravel-permission": "^6.7",
+        "spatie/laravel-translatable": "^6.10",
         "stripe/stripe-php": "^14.9"
     },
     "require-dev": {
